service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-enube
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"    
  labels:
    app: api-enube
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    run: api-enube
